# claude-auto

./: .gitignore  LICENSE  README.md  USAGE.md  pyproject.toml
hive/: __init__.py  account_pool.py  budget.py  claude_runner.py  cli.py  hive_controller.py  rate_limit.py  share_migration.py  worker.py
hive/prompts/: __init__.py  code_editor.md  orchestrator.md  planner.md  queen.md  researcher.md
tests/: test_controller_e2e.py  test_mcp_stdio.py  test_rotation.py  test_worker_e2e.py
